# ComputerGraphicsClass

./: .gitignore  README.md
CS545Projects/: CS545Projects.sln
CS545Projects/CS545Prog1/: CS545Prog1.sln
CS545Projects/CS545Prog1/CS545Prog1/: CS545Prog1.vcxproj  CS545Prog1.vcxproj.filters  OpenGL445Setup.h  main.cpp  pch.h
CS545Projects/CS545Prog1/CS545Prog1/Debug/: CS545Prog1.pch  vc141.idb
CS545Projects/CS545Prog1/Debug/: CS545Prog1.ilk
CS545Projects/CS545Prog2/: CS545Prog2.vcxproj  CS545Prog2.vcxproj.filters  OpenGL445Setup.h  main.cpp
CS545Projects/CS545Prog2/Debug/: CS545Prog2.pch  main.obj.enc  vc141.idb
CS545Projects/CS545Prog2/Debug/CS545Prog2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CS545Projects/CS545Prog3/: CS545Prog3.vcxproj  CS545Prog3.vcxproj.filters  OpenGL445Setup.h  main.cpp
CS545Projects/CS545Prog3/Debug/: main.obj.enc  vc141.idb
CS545Projects/CS545Prog3/Debug/CS545Prog3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CS545Prog3.lastbuildstate  (+3 more)
CS545Projects/CS545Prog4/: CS545Prog4.vcxproj  CS545Prog4.vcxproj.filters  OpenGL445Setup.h  main.cpp  pch.h
CS545Projects/CS545Prog4/Debug/: vc141.idb
CS545Projects/CS545Prog5/: CS545Prog5.vcxproj  CS545Prog5.vcxproj.filters  OpenGL445Setup.h  main.cpp  pch.cpp
CS545Projects/CS545Prog5/Debug/: CS545Prog5.pch  vc141.idb
CS545Projects/Debug/: CS545Prog1.ilk  CS545Prog2.ilk  CS545Prog3.ilk
CS545ProjectsInRust/CS545Prog1/: Cargo.toml
CS545ProjectsInRust/CS545Prog1/src/: main.rs  setup.rs
(+6 files in other folders)
